--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
     "emailjs": "^4.0.2",
     "html-to-react": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.2",
-    "react-share": "^4.4.1"
+    "react-share": "^4.4.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
