--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,7 @@
     "@hapi/joi": "^17.1.1",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
