--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,3 +1,5 @@
+
+
 {
   "name": "back-end",
   "version": "1.0.0",
@@ -6,6 +8,9 @@
   "scripts": {
     "start": "nodemon ./bin/www"
   },
+   "engines": {
+     "node": "18.9.0"
+ },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "axios": "^1.4.0",
