--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.14.2",
     "react-share": "^4.4.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^6.0.7"
+    "styled-components": "^6.0.7",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
