--- a/front-end/.env
+++ b/front-end/.env
@@ -1,3 +1,7 @@
 
 
-VITE_API_BASE_URL=http://localhost:8000
+# VITE_API_BASE_URL=http://localhost:8000
+
+
+
+VITE_API_BASE_URL=https://satochitradebackend.onrender.com
