--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "emailjs": "^4.0.2",
     "html-to-react": "^1.6.0",
     "react": "^18.2.0",
