--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "back-end",
   "version": "1.0.0",
@@ -8,9 +6,9 @@
   "scripts": {
     "start": "nodemon ./bin/www"
   },
-   "engines": {
-     "node": "18.9.0"
- },
+  "engines": {
+    "node": "18.9.0"
+  },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "axios": "^1.4.0",
@@ -28,6 +26,7 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "swagger-jsdoc": "^6.2.8",
