--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,9 +13,13 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-redux": "^7.1.25",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
     "emailjs": "^4.0.2",
     "html-to-react": "^1.6.0",
+    "jquery": "^3.7.1",
+    "jquery-knob": "^1.2.11",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
@@ -24,7 +28,7 @@
     "react-share": "^4.4.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.7",
-    "sweetalert2": "^11.7.27"
+    "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
