fix image upload problem

--- a/admin-dashboard/.env
+++ b/admin-dashboard/.env
@@ -1,3 +1,8 @@
-# REACT_APP_API_BASE_URL=https://api.staging.xtakee.com/v1
-# REACT_APP_API_BASE_URL= https://satochitradebackend.onrender.com
-REACT_APP_API_BASE_URL= http://localhost:8000
+
+
+
+
+# REACT_APP_API_BASE_URL="http://satoshifinancepro.com/api"
+
+
+REACT_APP_API_BASE_URL="http://localhost:8000/api"
