--- a/admin-dashboard/.env
+++ b/admin-dashboard/.env
@@ -2,7 +2,7 @@
 
 
 
-# REACT_APP_API_BASE_URL="http://satoshifinancepro.com/api"
+REACT_APP_API_BASE_URL="http://satoshifinancepro.com/api"
 
 
-REACT_APP_API_BASE_URL="http://localhost:8000/api"
+# REACT_APP_API_BASE_URL="http://localhost:8000/api"
