--- a/back-end/package.json
+++ b/back-end/package.json
@@ -17,6 +17,8 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "firebase": "^10.4.0",
+    "firebase-admin": "^11.10.1",
     "handlebars": "^4.7.7",
     "http-errors": "~1.6.3",
     "joi": "^17.9.2",
